--- a/css/styles.css
+++ b/css/styles.css
@@ -43,7 +43,8 @@ html {
   font-family: sans-serif;
   line-height: 1.15;
   -webkit-text-size-adjust: 100%;
-  -webkit-tap-highlight-color: rgba(30, 5, 255, 0) 0); }
+  -webkit-tap-highlight-color: rgba(30, 5, 255, 0) 0); 
+}
 
 article, aside, figcaption, figure, footer, header, hgroup, main, nav, section {
   display: block; }
@@ -73,7 +74,8 @@ h1, h2, h3, h4, h5, h6 {
 p {
   margin-top: 0;
   margin-bottom: 1rem;
-  color: #000000; }
+  color: #000000; 
+}
 
 abbr[title],
 abbr[data-original-title] {
