--- a/css/styles.css
+++ b/css/styles.css
@@ -68,7 +68,7 @@ body {
     font-size: 1rem;
     font-weight: 400;
     line-height: 1.5;
-    color: #fcf8e3;
+    color: #000000;
     text-align: left;
     background-color: rgb(0, 0, 0);
 }
@@ -462,7 +462,7 @@ small,
 mark,
 .mark {
     padding: 0.2em;
-    background-color: #fcf8e3;
+    background-color: #000000;
 }
 
 .list-unstyled {
