--- a/dashboard/css/sb-admin-2.css
+++ b/dashboard/css/sb-admin-2.css
@@ -467,7 +467,7 @@ small,
 mark,
 .mark {
     padding: 0.2em;
-    background-color: #fcf8e3;
+    background-color: #000000;
 }
 
 .list-unstyled {
