--- a/css/styles.css
+++ b/css/styles.css
@@ -12,18 +12,18 @@
     --pink: #e83e8c;
     --red: #dc3545;
     --orange: #fd7e14;
-    --yellow: #ffc107;
+    --yellow: #8DE525;
     --green: #004b09;
     --teal: #1abc9c;
     --cyan: #17a2b8;
     --white: #fff;
     --gray: #6c757d;
     --gray-dark: #343a40;
-    --primary: #ffa533;
+    --primary: #8DE525;
     --secondary: #004b09;
     --success: #004b09;
     --info: #ff0000;
-    --warning: #ffc107;
+    --warning: #8DE525;
     --danger: #dc3545;
     --light: #f8f9fa;
     --dark: #343a40;
@@ -46,7 +46,6 @@ html {
     font-family: sans-serif;
     line-height: 1.15;
     -webkit-text-size-adjust: 100%;
-    -webkit-tap-highlight-color: rgba(30, 5, 255, 0) 0);
 }
 
 article,
@@ -70,7 +69,7 @@ body {
     line-height: 1.5;
     color: #000000;
     text-align: left;
-    background-color: rgb(0, 0, 0);
+    background-color: #8DE525;
 }
 
 [tabindex="-1"]:focus:not(:focus-visible) {
@@ -167,13 +166,13 @@ sup {
 }
 
 a {
-    color: #000000;
+    color: #8DE525;
     text-decoration: none;
     background-color: transparent;
 }
 
 a:hover {
-    color: #000000;
+    color: #8DE525;
     text-decoration: underline;
 }
 
@@ -2475,36 +2474,43 @@ fieldset:disabled a.btn {
 
 .btn-primary {
     color: #212529;
-    background-color: #ffa533;
-    border-color: #ffa533;
+    background-color: #8DE525;
+    ;
+    border-color: #8DE525;
+    ;
 }
 
 .btn-primary:hover {
     color: #212529;
     background-color: #ff940d;
-    border-color: #ff8f00;
+    border-color: #8DE525;
+    ;
 }
 
 .btn-primary:focus,
 .btn-primary.focus {
     color: #212529;
     background-color: #ff940d;
-    border-color: #ff8f00;
+    border-color: #8DE525;
+    ;
     box-shadow: 0 0 0 0.2rem rgba(222, 146, 50, 0.5);
 }
 
 .btn-primary.disabled,
 .btn-primary:disabled {
     color: #212529;
-    background-color: #ffa533;
-    border-color: #ffa533;
+    background-color: #8DE525;
+    ;
+    border-color: #8DE525;
+    ;
 }
 
 .btn-primary:not(:disabled):not(.disabled):active,
 .btn-primary:not(:disabled):not(.disabled).active,
 .show>.btn-primary.dropdown-toggle {
     color: #212529;
-    background-color: #ff8f00;
+    background-color: #8DE525;
+    ;
     border-color: #f28700;
 }
 
@@ -2639,8 +2645,10 @@ fieldset:disabled a.btn {
 
 .btn-warning {
     color: #212529;
-    background-color: #ffc107;
-    border-color: #ffc107;
+    background-color: #8DE525;
+    ;
+    border-color: #8DE525;
+    ;
 }
 
 .btn-warning:hover {
@@ -2660,8 +2668,10 @@ fieldset:disabled a.btn {
 .btn-warning.disabled,
 .btn-warning:disabled {
     color: #212529;
-    background-color: #ffc107;
-    border-color: #ffc107;
+    background-color: #8DE525;
+    ;
+    border-color: #8DE525;
+    ;
 }
 
 .btn-warning:not(:disabled):not(.disabled):active,
@@ -2802,14 +2812,18 @@ fieldset:disabled a.btn {
 }
 
 .btn-outline-primary {
-    color: #ffa533;
-    border-color: #ffa533;
+    color: #8DE525;
+    ;
+    border-color: #8DE525;
+    ;
 }
 
 .btn-outline-primary:hover {
     color: #212529;
-    background-color: #ffa533;
-    border-color: #ffa533;
+    background-color: #8DE525;
+    ;
+    border-color: #8DE525;
+    ;
 }
 
 .btn-outline-primary:focus,
@@ -2819,7 +2833,8 @@ fieldset:disabled a.btn {
 
 .btn-outline-primary.disabled,
 .btn-outline-primary:disabled {
-    color: #ffa533;
+    color: #8DE525;
+    ;
     background-color: transparent;
 }
 
@@ -2827,8 +2842,10 @@ fieldset:disabled a.btn {
 .btn-outline-primary:not(:disabled):not(.disabled).active,
 .show>.btn-outline-primary.dropdown-toggle {
     color: #212529;
-    background-color: #ffa533;
-    border-color: #ffa533;
+    background-color: #8DE525;
+    ;
+    border-color: #8DE525;
+    ;
 }
 
 .btn-outline-primary:not(:disabled):not(.disabled):active:focus,
@@ -2946,14 +2963,18 @@ fieldset:disabled a.btn {
 }
 
 .btn-outline-warning {
-    color: #ffc107;
-    border-color: #ffc107;
+    color: #8DE525;
+    ;
+    border-color: #8DE525;
+    ;
 }
 
 .btn-outline-warning:hover {
     color: #212529;
-    background-color: #ffc107;
-    border-color: #ffc107;
+    background-color: #8DE525;
+    ;
+    border-color: #8DE525;
+    ;
 }
 
 .btn-outline-warning:focus,
@@ -2963,7 +2984,8 @@ fieldset:disabled a.btn {
 
 .btn-outline-warning.disabled,
 .btn-outline-warning:disabled {
-    color: #ffc107;
+    color: #8DE525;
+    ;
     background-color: transparent;
 }
 
@@ -2971,8 +2993,10 @@ fieldset:disabled a.btn {
 .btn-outline-warning:not(:disabled):not(.disabled).active,
 .show>.btn-outline-warning.dropdown-toggle {
     color: #212529;
-    background-color: #ffc107;
-    border-color: #ffc107;
+    background-color: #8DE525;
+    ;
+    border-color: #8DE525;
+    ;
 }
 
 .btn-outline-warning:not(:disabled):not(.disabled):active:focus,
@@ -3091,7 +3115,8 @@ fieldset:disabled a.btn {
 
 .btn-link {
     font-weight: 400;
-    color: #ffa533;
+    color: #8DE525;
+    ;
     text-decoration: none;
 }
 
@@ -3399,7 +3424,8 @@ input[type="button"].btn-block {
 .dropdown-item:active {
     color: #fff;
     text-decoration: none;
-    background-color: #ffa533;
+    background-color: #8DE525;
+    ;
 }
 
 .dropdown-item.disabled,
@@ -3760,8 +3786,10 @@ input[type="button"].btn-block {
 
 .custom-control-input:checked~.custom-control-label::before {
     color: #fff;
-    border-color: #ffa533;
-    background-color: #ffa533;
+    border-color: #8DE525;
+    ;
+    background-color: #8DE525;
+    ;
 }
 
 .custom-control-input:focus~.custom-control-label::before {
@@ -3827,8 +3855,10 @@ input[type="button"].btn-block {
 }
 
 .custom-checkbox .custom-control-input:indeterminate~.custom-control-label::before {
-    border-color: #ffa533;
-    background-color: #ffa533;
+    border-color: #8DE525;
+    ;
+    background-color: #8DE525;
+    ;
 }
 
 .custom-checkbox .custom-control-input:indeterminate~.custom-control-label::after {
@@ -4055,7 +4085,8 @@ input[type="button"].btn-block {
     width: 1rem;
     height: 1rem;
     margin-top: -0.25rem;
-    background-color: #ffa533;
+    background-color: #8DE525;
+    ;
     border: 0;
     border-radius: 1rem;
     transition: background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
@@ -4085,7 +4116,8 @@ input[type="button"].btn-block {
 .custom-range::-moz-range-thumb {
     width: 1rem;
     height: 1rem;
-    background-color: #ffa533;
+    background-color: #8DE525;
+    ;
     border: 0;
     border-radius: 1rem;
     transition: background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
@@ -4118,7 +4150,8 @@ input[type="button"].btn-block {
     margin-top: 0;
     margin-right: 0.2rem;
     margin-left: 0.2rem;
-    background-color: #ffa533;
+    background-color: #8DE525;
+    ;
     border: 0;
     border-radius: 1rem;
     transition: background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
@@ -4259,7 +4292,8 @@ input[type="button"].btn-block {
 .nav-pills .nav-link.active,
 .nav-pills .show>.nav-link {
     color: #fff;
-    background-color: #ffa533;
+    background-color: #8DE525;
+    ;
 }
 
 .nav-fill .nav-item {
@@ -4959,7 +4993,8 @@ input[type="button"].btn-block {
     padding: 0.5rem 0.75rem;
     margin-left: -0.125rem;
     line-height: 1.25;
-    color: #ffa533;
+    color: #8DE525;
+    ;
     background-color: #fff;
     border: 0.125rem solid #dee2e6;
 }
@@ -4992,8 +5027,10 @@ input[type="button"].btn-block {
 .page-item.active .page-link {
     z-index: 3;
     color: #fff;
-    background-color: #ffa533;
-    border-color: #ffa533;
+    background-color: #8DE525;
+    ;
+    border-color: #8DE525;
+    ;
 }
 
 .page-item.disabled .page-link {
@@ -5077,13 +5114,15 @@ a.badge:focus {
 
 .badge-primary {
     color: #212529;
-    background-color: #ffa533;
+    background-color: #8DE525;
+    ;
 }
 
 a.badge-primary:hover,
 a.badge-primary:focus {
     color: #212529;
-    background-color: #ff8f00;
+    background-color: #8DE525;
+    ;
 }
 
 a.badge-primary:focus,
@@ -5145,7 +5184,8 @@ a.badge-info.focus {
 
 .badge-warning {
     color: #212529;
-    background-color: #ffc107;
+    background-color: #8DE525;
+    ;
 }
 
 a.badge-warning:hover,
@@ -5396,7 +5436,8 @@ a.badge-dark.focus {
     color: #fff;
     text-align: center;
     white-space: nowrap;
-    background-color: #ffa533;
+    background-color: #8DE525;
+    ;
     transition: width 0.6s ease;
 }
 
@@ -5484,8 +5525,10 @@ a.badge-dark.focus {
 .list-group-item.active {
     z-index: 2;
     color: #fff;
-    background-color: #ffa533;
-    border-color: #ffa533;
+    background-color: #8DE525;
+    ;
+    border-color: #8DE525;
+    ;
 }
 
 .list-group-item+.list-group-item {
@@ -6621,14 +6664,14 @@ a.close.disabled {
 }
 
 .bg-primary {
-    background-color: #f58b00 !important;
+    background-color: #8DE525 !important;
 }
 
 a.bg-primary:hover,
 a.bg-primary:focus,
 button.bg-primary:hover,
 button.bg-primary:focus {
-    background-color: #ff8f00 !important;
+    background-color: #8DE525 !important;
 }
 
 .bg-secondary {
@@ -6665,7 +6708,7 @@ button.bg-info:focus {
 }
 
 .bg-warning {
-    background-color: #ffc107 !important;
+    background-color: #8DE525 !important;
 }
 
 a.bg-warning:hover,
@@ -6757,7 +6800,7 @@ button.bg-dark:focus {
 }
 
 .border-primary {
-    border-color: ##ffa733 !important;
+    border-color: #8DE525 !important;
 }
 
 .border-secondary {
@@ -6773,7 +6816,7 @@ button.bg-dark:focus {
 }
 
 .border-warning {
-    border-color: #ffc107 !important;
+    border-color: #8DE525 !important;
 }
 
 .border-danger {
@@ -9811,29 +9854,29 @@ a.text-secondary:focus {
 
 a.text-success:hover,
 a.text-success:focus {
-    color: #f58b00!important;
+    color: #8DE525 !important;
 }
 
 .text-info {
-    color: #f58b00 !important;
+    color: #8DE525 !important;
 }
 
 a.text-info:hover,
 a.text-info:focus {
-    color: #f58b00!important;
+    color: #8DE525 !important;
 }
 
 .text-warning {
-    color: #f58b00!important;
+    color: #8DE525 !important;
 }
 
 a.text-warning:hover,
 a.text-warning:focus {
-    color: #f58b00!important;
+    color: #8DE525 !important;
 }
 
 .text-danger {
-    color: #f58b00!important;
+    color: #8DE525 !important;
 }
 
 a.text-danger:hover,
@@ -10086,7 +10129,8 @@ a.text-dark:focus {
 }
 
 #mainNav .navbar-nav li.nav-item a.nav-link:hover {
-    color: #ffa533;
+    color: #8DE525;
+    ;
 }
 
 #mainNav .navbar-nav li.nav-item a.nav-link:active,
@@ -10095,7 +10139,8 @@ a.text-dark:focus {
 }
 
 #mainNav .navbar-nav li.nav-item a.nav-link.active {
-    color: #ffa533;
+    color: #8DE525;
+    ;
 }
 
 #mainNav .navbar-toggler {
@@ -10118,13 +10163,13 @@ a.text-dark:focus {
     }
     #mainNav .navbar-nav>li.nav-item>a.nav-link.active {
         color: #fff;
-        background: #ffa533;
+        background: #8DE525;
     }
     #mainNav .navbar-nav>li.nav-item>a.nav-link.active:active,
     #mainNav .navbar-nav>li.nav-item>a.nav-link.active:focus,
     #mainNav .navbar-nav>li.nav-item>a.nav-link.active:hover {
         color: #fff;
-        background: #ffa533;
+        background: #8DE525;
     }
     #mainNav.navbar-shrink {
         padding-top: 0.5rem;
@@ -10212,7 +10257,8 @@ a.text-dark:focus {
     top: 1rem;
     font-size: 3rem;
     line-height: 3rem;
-    color: #ffa533;
+    color: #8DE525;
+    ;
     opacity: 1;
 }
 
@@ -10261,7 +10307,8 @@ a.text-dark:focus {
 }
 
 .floating-label-form-group-with-focus label {
-    color: #ffa533;
+    color: #8DE525;
+    ;
 }
 
 form .row:first-child .floating-label-form-group {
@@ -10276,7 +10323,8 @@ form .row:first-child .floating-label-form-group {
 }
 
 .copyright {
-    background-color: #8c948b;
+    background-color: #8DE525;
+    ;
 }
 
 .icon-contact {
@@ -10286,7 +10334,8 @@ form .row:first-child .floating-label-form-group {
     align-items: center;
     justify-content: center;
     font-size: 2rem;
-    background-color: #ffa533;
+    background-color: #8DE525;
+    ;
     color: rgb(255, 255, 255);
     border-radius: 100%;
 }
