--- a/css/iniciosesion.css
+++ b/css/iniciosesion.css
@@ -1,40 +1,36 @@
 :root {
     --input-padding-x: 1.5rem;
-    --input-padding-y: .75rem;
+    --input-padding-y: 0.75rem;
 }
 
-body {
-    background: #007bff;
-    background: linear-gradient(to right, #8DE525, #ffff);
+.login,
+.image {
+    min-height: 100vh;
 }
 
-.card-signin {
-    border: 0;
-    border-radius: 1rem;
-    box-shadow: 0 0.5rem 1rem 0 rgba(0, 0, 0, 0.1);
+.bg-image {
+    background-image: url('https://media.istockphoto.com/photos/organic-food-background-picture-id1161951083?b=1&k=6&m=1161951083&s=170667a&w=0&h=LHsXI9dtaoHfFnBdmG0kkJ3VePCvNIcvGKu1LLTAMsI=');
+    background-size: cover;
+    background-position: center;
+    border-radius: 10px;
 }
 
-.card-signin .card-title {
-    margin-bottom: 2rem;
+.bg-imagenp {
+    background-image: url('https://cdn.pixabay.com/photo/2015/11/19/10/38/food-1050813_960_720.jpg');
+    background-size: cover;
+    background-position: center;
+    border-radius: 14px;
+}
+
+.login-heading {
     font-weight: 300;
-    font-size: 1.5rem;
 }
 
-.card-signin .card-body {
-    padding: 2rem;
-}
-
-.form-signin {
-    width: 100%;
-}
-
-.form-signin .btn {
-    font-size: 80%;
-    border-radius: 5rem;
-    letter-spacing: .1rem;
-    font-weight: bold;
-    padding: 1rem;
-    transition: all 0.2s;
+.btn-login {
+    font-size: 0.9rem;
+    letter-spacing: 0.05rem;
+    padding: 0.75rem 1rem;
+    border-radius: 2rem;
 }
 
 .form-label-group {
@@ -42,14 +38,11 @@ body {
     margin-bottom: 1rem;
 }
 
-.form-label-group input {
-    height: auto;
-    border-radius: 2rem;
-}
-
 .form-label-group>input,
 .form-label-group>label {
     padding: var(--input-padding-y) var(--input-padding-x);
+    height: auto;
+    border-radius: 2rem;
 }
 
 .form-label-group>label {
@@ -62,6 +55,8 @@ body {
     /* Override default `<label>` margin */
     line-height: 1.5;
     color: #495057;
+    cursor: text;
+    /* Match the input under the label */
     border: 1px solid transparent;
     border-radius: .25rem;
     transition: all .1s ease-in-out;
@@ -97,16 +92,6 @@ body {
     padding-bottom: calc(var(--input-padding-y) / 3);
     font-size: 12px;
     color: #777;
-}
-
-.btn-google {
-    color: white;
-    background-color: #ea4335;
-}
-
-.btn-facebook {
-    color: white;
-    background-color: #3b5998;
 }
 
 
