Cuadrando css más cambios...

--- a/dashboard/css/sb-admin-2.css
+++ b/dashboard/css/sb-admin-2.css
@@ -2526,14 +2526,14 @@ fieldset:disabled a.btn {
 
 .btn-primary:hover {
     color: #fff;
-    background-color: #2e59d9;
+    background-color: #413;
     border-color: #2653d4;
 }
 
 .btn-primary:focus,
 .btn-primary.focus {
     color: #fff;
-    background-color: #2e59d9;
+    background-color: #413;
     border-color: #2653d4;
     box-shadow: 0 0 0 0.2rem rgba(105, 136, 228, 0.5);
 }
