--- a/dashboard/css/sb-admin-2.css
+++ b/dashboard/css/sb-admin-2.css
@@ -2527,14 +2527,14 @@ fieldset:disabled a.btn {
 .btn-primary:hover {
     color: #fff;
     background-color: #413;
-    border-color: #2653d4;
+    border-color: #413;
 }
 
 .btn-primary:focus,
 .btn-primary.focus {
     color: #fff;
     background-color: #413;
-    border-color: #2653d4;
+    border-color: #413;
     box-shadow: 0 0 0 0.2rem rgba(105, 136, 228, 0.5);
 }
 
@@ -2549,8 +2549,8 @@ fieldset:disabled a.btn {
 .btn-primary:not(:disabled):not(.disabled).active,
 .show>.btn-primary.dropdown-toggle {
     color: #fff;
-    background-color: #2653d4;
-    border-color: #244ec9;
+    background-color: #413;
+    border-color: #413;
 }
 
 .btn-primary:not(:disabled):not(.disabled):active:focus,
@@ -5153,7 +5153,7 @@ a.badge:focus {
 a.badge-primary:hover,
 a.badge-primary:focus {
     color: #fff;
-    background-color: #2653d4;
+    background-color: #413;
 }
 
 a.badge-primary:focus,
@@ -6735,7 +6735,7 @@ a.bg-primary:hover,
 a.bg-primary:focus,
 button.bg-primary:hover,
 button.bg-primary:focus {
-    background-color: #2653d4 !important;
+    background-color: #413 !important;
 }
 
 .bg-secondary {
