--- a/css/styles.css
+++ b/css/styles.css
@@ -1991,7 +1991,7 @@ pre code {
 .form-control:focus {
     color: #495057;
     background-color: #fff;
-    border-color: #ffddb3;
+    border-color: #32d84e;
     outline: 0;
     box-shadow: 0 0 0 0.2rem rgba(255, 165, 51, 0.25);
 }
@@ -3797,7 +3797,7 @@ input[type="button"].btn-block {
 }
 
 .custom-control-input:focus:not(:checked)~.custom-control-label::before {
-    border-color: #ffddb3;
+    border-color: #32d84e;
 }
 
 .custom-control-input:not(:disabled):active~.custom-control-label::before {
@@ -3938,7 +3938,7 @@ input[type="button"].btn-block {
 }
 
 .custom-select:focus {
-    border-color: #ffddb3;
+    border-color: #32d84e;
     outline: 0;
     box-shadow: 0 0 0 0.2rem rgba(255, 165, 51, 0.25);
 }
@@ -4003,7 +4003,7 @@ input[type="button"].btn-block {
 }
 
 .custom-file-input:focus~.custom-file-label {
-    border-color: #ffddb3;
+    border-color: #32d84e;
     box-shadow: 0 0 0 0.2rem rgba(255, 165, 51, 0.25);
 }
 
